# reader

./: README.md  build_error.txt  check_react.js  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  build.err  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ShortcutInput.tsx
src/hooks/: useGhostMode.ts  useReader.ts  useSettings.ts
