[package]
name = "tauri-appmoyu-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["system-tray", "dialog-all", "fs-all", "global-shortcut-all", "os-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
epub = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
